--- a/index.html
+++ b/index.html
@@ -1,22 +1,147 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>nyshoppinglist</title>
+        <title>AlibabaExpress</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="responsive" href="css/responsive.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <h1>Shopping List</h1>
-        </header>
+        <div class="top">
+                <div class="header">
+                    <h1>Alibaba Express</h1> 
+                </div>
+                <nav class="navigation" >
+                    <ul class="links">
+                            <li><a href="#" class="link">Elektronik</a></li>
+                            <li><a href="#" class="link">Kläder</a></li>
+                            <li><a href="#" class="link">Leksaker</a></li>
+                            <li><a href="#" class="link">Telefoner</a></li>
+                            <li><a href="#" class="link">Sport</a></li>
+                    </ul>
+                </nav>  
+        </div>
         <div class="content">
             <form id="shopping-list">
                 <input type="text" id="input-form">
-                <button type="submit">Add item</button>
+                <button type="submit">Search product</button>
             </form>
             <ul id="list">
                 
             </ul>
         </div>
+        <main>
+            <section class="Elektronik">
+                <article>
+                    <h2>Elektronik</h3>
+                    <div>   
+                    <ul class="list">
+                        <li>
+                            <div>
+                                <p>Microphone</p>
+                                <img src="img/Shure_SM58_LC_SM58_LC_Cardioid_Dynamic_68463.jpg" class="bild"alt="mic">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="img/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div> 
+                </article>
+            </section>
+            <section class="Kläder">
+                <article>
+                    <h2>Kläder</h3>
+                    <ul class="list">
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+            <section class="Leksaker">
+                <article>
+                    <h2>Leksaker</h3>
+                    <ul class="list">
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+            <section class="Telefoner">
+                <article>
+                    <h2>Telefoner</h3>    
+                    <ul class="list">
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+            <section class="Sport">
+                <article>
+                    <h2>Sport</h3>
+                    <ul class="list">
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p>Iphone</p>
+                                <img src="https://www.technobezz.com/files/uploads/2018/01/How-To-Fix-iPhone-8-Cellular-Data-Issues.jpg" class="bild"alt="iphone">
+                                <button type="submit" class="btn">Add</button>
+                            </div>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+        </main>
+        
+        <footer id="bottom">
+            <p>&copy; 2018 Filip Mitrovic Grupp: A</p>
+        </footer>
     </body>
 </html>
